--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -26,6 +26,16 @@
 		width: 100%;
 		transition: padding 200ms linear;
 		z-index: 999;
+		@media screen and (min-width: 999px) {
+			position: absolute;
+			background: transparent;
+			flex-direction: row;
+			padding: 2.7rem 0rem 1.1rem;
+			margin: 0 6rem;
+			animation: none;
+			border-bottom: 1px solid $white;
+			width: stretch;
+		}
 		.logoMenuIcon {
 			display: flex;
 			flex-direction: row;
@@ -33,19 +43,31 @@
 			justify-content: space-between;
 			width: 100%;
 			padding: 0 3rem;
-			.logo {
-				display: flex;
-				align-items: center;
-				.companyName {
-					margin-left: 0.3rem;
-					padding: 1rem;
-					letter-spacing: 0.07rem;
-					font-weight: 300;
-					line-height: 1.4rem;
-					p {
-						text-transform: uppercase;
-						font-size: 0.8rem;
-						letter-spacing: 0.16rem;
+			@media screen and (min-width: 999px) {
+				width: 25%;
+				padding: 0;
+				.menuIcon {
+					display: none;
+				}
+			}
+			.logoContainer {
+				text-decoration: none;
+				padding: 0;
+				min-width: 17rem;
+				.logo {
+					display: flex;
+					align-items: center;
+					.companyName {
+						margin-left: 0.3rem;
+						padding: 1rem;
+						letter-spacing: 0.07rem;
+						font-weight: 300;
+						line-height: 1.4rem;
+						p {
+							text-transform: uppercase;
+							font-size: 0.8rem;
+							letter-spacing: 0.16rem;
+						}
 					}
 				}
 			}
@@ -53,21 +75,31 @@
 
 		.menu {
 			display: flex;
-			flex-grow: 2;
 			flex-direction: column;
+			flex-wrap: wrap;
 			align-items: center;
 			justify-content: flex-end;
 			text-align: center;
 			animation: showMenu 300ms forwards;
 			overflow: hidden;
+			@media screen and (min-width: 999px) {
+				flex-direction: row;
+				animation: none 300ms linear;
+			}
 			.menuLinks {
 				display: flex;
 				flex-direction: column;
+				margin: 1.6rem;
 				a {
 					text-transform: uppercase;
 					text-decoration: none;
 				}
-				margin: 1.6rem;
+				@media screen and (min-width: 999px) {
+					flex-direction: row;
+					li {
+						padding: 1rem;
+					}
+				}
 			}
 			.menuActions {
 				display: flex;
@@ -81,6 +113,9 @@
 						@include hover($blue, $white);
 					}
 				}
+				@media screen and (min-width: 999px) {
+					flex-direction: row;
+				}
 				.search {
 					margin: 1.3rem;
 				}
@@ -89,37 +124,6 @@
 			&.hideMenu {
 				overflow: hidden;
 				animation: hideMenu 300ms forwards;
-			}
-		}
-
-		@media screen and (min-width: 999px) {
-			position: absolute;
-			background: transparent;
-			flex-direction: row;
-			padding: 2.7rem 0rem 1.1rem;
-			margin: 0 6rem;
-			animation: none;
-			border-bottom: 1px solid $white;
-			width: stretch;
-			.logoMenuIcon {
-				width: 25%;
-				padding: 0;
-				.menuIcon {
-					display: none;
-				}
-			}
-			.menu {
-				flex-direction: row;
-				animation: none 300ms linear;
-				.menuLinks {
-					flex-direction: row;
-					li {
-						padding: 1rem;
-					}
-				}
-				.menuActions {
-					flex-direction: row;
-				}
 			}
 		}
 	}
@@ -194,7 +198,7 @@
 			flex-direction: row;
 			justify-content: flex-start;
 		}
-		@media (min-width: 992px) {
+		@media (min-width: 999px) {
 			padding-left: 9.55%;
 		}
 		.subMenuPrompt {
